Archive2/a5/6a6e7df07187f7/output
main.cpp:37:18: error: non-friend class member 'declval' cannot have a qualified name
    typedef std::declval<Tup>() tuple_start_t;
            ~~~~~^
main.cpp:37:18: error: C++ requires a type specifier for all declarations
    typedef std::declval<Tup>() tuple_start_t;
    ~~~~~~~      ^
main.cpp:37:18: error: typedef declarator cannot be qualified
    typedef std::declval<Tup>() tuple_start_t;
            ~~~~~^
main.cpp:37:18: error: typedef name must be an identifier
    typedef std::declval<Tup>() tuple_start_t;
                 ^~~~~~~~~~~~
main.cpp:37:32: error: expected ';' at end of declaration list
    typedef std::declval<Tup>() tuple_start_t;
                               ^
                               ;
5 errors generated.
